<resources>
    <string name="app_name">Tosyali CRM</string>

    <string name="userPreferences">preferences</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title">Client Relation Management</string>
    <string name="sign_up">Register</string>
    <string name="conf_password">Confirm Password</string>
    <string name="register_message">Don\'t have an account yet ? Please Register.</string>
    <string name="login_message">Already have an account ? Please Login.</string>
    <string name="invalid_email_message">Please enter a valid email address.</string>
    <string name="invalid_password_message">Please enter a valid password.</string>
    <string name="invalid_confirm_password_message">Passwords don\'t match.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="please_wait">Connecting, Please Wait ...</string>
    <string name="text_logout">Logout</string>
    <string name="text_home">Home</string>
    <string name="text_add">Add</string>
    <string name="client_name">Client name</string>
    <string name="client_address">Client address</string>
    <string name="select_date_and_time">Date &amp; time of Interview :</string>
    <string name="interested_by">Interested By (Products) :</string>
    <string name="select_user_location">Select Location</string>
    <string name="interview_details">Interview details</string>
    <string name="save">Save Interview</string>
    <string name="invalid_name">Client name must be at least 4 characters.</string>
    <string name="invalid_address">Client name must be at least 10 characters.</string>
    <string name="map_lat">Latitude</string>
    <string name="map_long">Longitude</string>
    <string name="save_location">Confirm Location</string>
    <string name="invalid">Invalid</string>

</resources>
