<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/default_margin_padding"
            android:paddingTop="@dimen/container_padding"
            android:paddingBottom="@dimen/container_padding"
            android:paddingLeft="@dimen/default_margin_padding"
            android:paddingRight="@dimen/default_margin_padding"
            android:background="@drawable/container_layout_ronded_corner">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/tosyali_logo"
                android:layout_margin="@dimen/default_margin_padding"
                android:shadowColor="@color/textColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/title"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:shadowColor="@color/textColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:fontFamily="@font/roboto"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_login_frag_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_login_frag_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_login_frag_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_login_frag_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_ronded_corner"
                android:textColor="@android:color/white"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto"
                android:shadowColor="@color/textColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>

            <TextView
                android:id="@+id/text_login_frag_switch_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:padding="@dimen/default_margin_padding"
                android:layout_gravity="end"
                android:text="@string/register_message"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:fontFamily="@font/roboto"
                android:shadowColor="@color/textColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>