<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".crm_dashboard.MapFragment">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        map:cameraTargetLat="35.692174"
        map:cameraTargetLng="-0.630289"
        map:cameraZoom="10" />

    <Button
        android:id="@+id/button_select_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin_padding"
        android:background="@drawable/button_ronded_corner"
        android:textColor="@android:color/white"
        android:text="@string/save_location"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/default_margin_padding"
        android:layout_marginBottom="@dimen/default_margin_padding"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/textColor"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:contentPadding="@dimen/default_margin_padding"
            app:cardBackgroundColor="@android:color/white"
            android:layout_marginTop="@dimen/container_padding"
            android:layout_marginStart="@dimen/container_padding"
            android:layout_marginEnd="@dimen/container_padding">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_map_frag_lan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_map_frag_lan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/map_lat"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="numberSigned"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:contentPadding="@dimen/default_margin_padding"
            app:cardBackgroundColor="@android:color/white"
            android:layout_marginTop="@dimen/container_padding"
            android:layout_marginStart="@dimen/container_padding"
            android:layout_marginEnd="@dimen/container_padding">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_map_frag_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_map_frag_long"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/map_long"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="numberSigned"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
