<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".crm_dashboard.InterviewFragment"
    android:layout_marginBottom="@dimen/container_padding">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/text_interview_frag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_padding"
            android:text="New Interview"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:fontFamily="@font/roboto"/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_padding"
            android:layout_margin="@dimen/default_margin_padding">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_interview_frag_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_interview_frag_client_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_name"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_interview_frag_client_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_interview_frag_client_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_address"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:lines="2"
                    android:scrollbars="vertical"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_map_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="@dimen/default_margin_padding"
                android:layout_weight="0.5"
                android:layout_margin="@dimen/default_margin_padding">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_map"
                        android:layout_margin="@dimen/default_margin_padding"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/select_user_location"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding"
                android:text="@string/select_date_and_time"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_padding"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_date_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="@dimen/default_margin_padding"
                    android:layout_weight="0.5"
                    android:layout_margin="@dimen/default_margin_padding">

                    <TextView
                        android:id="@+id/text_interview_frag_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="24/04/2018"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/textColor"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_time_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="@dimen/default_margin_padding"
                    android:layout_weight="0.5"
                    android:layout_margin="@dimen/default_margin_padding">

                    <TextView
                        android:id="@+id/text_interview_frag_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="14:22"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/textColor"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto"/>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding"
                android:text="@string/interested_by"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>

            <CheckBox
                android:id="@+id/checkbox_product_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding"
                android:padding="@dimen/default_margin_padding"
                android:text="Product 1"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>
            <CheckBox
                android:id="@+id/checkbox_product_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding"
                android:padding="@dimen/default_margin_padding"
                android:text="Product 2"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>
            <CheckBox
                android:id="@+id/checkbox_product_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_padding"
                android:padding="@dimen/default_margin_padding"
                android:text="Product 3"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_interview_frag_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto">
                <EditText
                    android:id="@+id/edit_interview_frag_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/interview_details"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/roboto"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:lines="2"
                    android:scrollbars="vertical"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_upload_interview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_ronded_corner"
                android:textColor="@android:color/white"
                android:text="@string/save"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginBottom="@dimen/default_margin_padding"
                android:fontFamily="@font/roboto"
                android:shadowColor="@color/textColor"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>